# AI-Agent

./: .clircrules  .gitignore  README.md  answer.html  answer.md  answer.txt  build.sh  deploy.sh  dockerfile  pyproject.toml  setup.sh
memory-bank/: activeContext.md  productContext.md  progress.md  projectBrief.md  systemPatterns.md  techContext.md
src/: main.py
src/agent/: __init__.py  agent.py  analysis.py  base.py  code.py  multi_agent_system.py  orchestrator.py  research.py  review.py  state.py  utils.py
src/config/: config.py  intent_config.json
src/interfaces/: discord_interface.py
src/llm/: google_llm.py
src/memory/: memory.py
src/system_prompt/: system_message.txt
src/tools/: search.py
tests/: test_agent.py
